fix visibility on fullstack logo

--- a/src/styles/pages/experience.css
+++ b/src/styles/pages/experience.css
@@ -45,7 +45,10 @@
 }
 
 .fullstack__header img {
-  max-height: 5rem;  
+  max-height: 5rem;   
+  background-color: white;
+  border-radius: 1rem;
+  padding: 1rem;
 }
 
 .guildgaming__header--main a {
@@ -64,6 +67,8 @@
   text-transform: uppercase;
   display: block;
 }
+
+
 
 @media (max-width: 800px) {
   .searchspring__header img {
